--- a/css/styles.css
+++ b/css/styles.css
@@ -919,7 +919,7 @@ ul.list {
   top: 0;
   left: 32px;
   right: 0;
-  height: 120px;
+  height: 80px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -moz-box-align: center;
@@ -1121,7 +1121,7 @@ footer a {
   display: -ms-flexbox;
   display: flex;
   z-index: 1;
-  padding-bottom: 40px; }
+  padding-bottom: 0px; }
   .footer__socials {
     text-align: center; }
   .footer__dash {
@@ -1826,6 +1826,7 @@ footer a {
     text-transform: uppercase;
     margin-top: -14px; }
   .home__about-content {
+    text-align: justify;
     font-weight: normal;
     font-size: 16px;
     letter-spacing: 0.4px;
@@ -1839,8 +1840,7 @@ footer a {
     letter-spacing: 1.5px;
     line-height: 40px;
     text-transform: uppercase;
-    margin-top: 16px;
-    margin-bottom: 20px; }
+  margin-bottom: 5px;}
 
 .home__blog {
   margin-bottom: 56px; }
